--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -55,6 +55,12 @@ body {
         font-size: 6em;
         font-weight: 100;
     }
+
+    h2 {
+        margin-top: 0px;
+        margin-bottom: 20px;
+        font-weight: 100;
+    }
 }
 
 .card {
